# serviced

./: .gitignore  CMakeLists.txt  Makefile  README.md  debug.h  early_start.h  example.sh  file_monitor.c  file_monitor.h  log.c  log.h  log_ubus.c  log_ubus.h  reload_example.sh  service.c  service.h  serviced.c  serviced_ubus.c  serviced_ubus.h  string_constants.c  string_constants.h  ubus_connection.c  ubus_connection.h  utils.c  utils.h
early.d/: 0001_ubusd.json  CMakeLists.txt
include/: debug.h  debug_output.h  file_monitor.h  iterate_files.h  log.h  service.h  serviced_ubus.h  string_constants.h  ubus_connection.h  utils.h
scripts/: example_init.sh  service.common  service_execute.sh  service_helpers.sh  service_init.sh  serviced.sh
src/: debug_output.c  early_start.c  file_monitor.c  iterate_files.c  log.c  service.c  serviced.c  serviced_ubus.c  string_constants.c  utils.c
